<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:textStyle="bold"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:textStyle="bold"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:textStyle="bold"
            android:hint="@string/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:textStyle="bold"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/back"
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

    </LinearLayout>

</ScrollView>